--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-    margin: :0;
+    margin: 0;
     padding: 0;
     box-sizing:border-box;
 }
@@ -182,7 +182,7 @@ small{
 .testimonial .col-3:hover{
     transform: translatey(-10px);
 }
-.fa. fa-quote-left{
+.fa.fa-quote-left{
     font-size: 34px;
     color:#ff523b;
 }
@@ -200,7 +200,7 @@ small{
 /*-------brands---------*/
 
 .brands{
-    margin 100px auto;
+    margin :100px auto;
     
 }
 .col-5{
@@ -221,7 +221,7 @@ small{
     background:#000;
     color:#8a8a8a;
     font-size:14px;
-    padding; 60px 0 20px ;
+    padding: 60px 0 20px ;
 }
 .footer P{
     color:#8a8a8a;
@@ -235,7 +235,7 @@ small{
     margin-bottom:20 px;
 }
 .footer-col-1{
-    flex-basis; 30%;
+    flex-basis: 30%;
 }
 .footer-col-2{
     flex:1;
